# xianyu-mcp-server

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.mcp/XianYuApis_MCP/: README.md  pyproject.toml  server.py
.mcp/XianYuApis_MCP/tools/: xianyu_api_tools.py
.trae/: mcp.json
.trae/specs/archive/2026-07-17-update-thirdparty-readme/: checklist.md  spec.md  tasks.md
docs/: mtop_idle_web_xyh_item_list.md
openspec/changes/remove-nodejs-dependency/: design.md  proposal.md  tasks.md
openspec/changes/remove-nodejs-dependency/specs/pure-python-sign/: spec.md
src/xianyu_mcp/: __init__.py  server.py
src/xianyu_mcp/tools/: xianyu_api_tools.py
