[project]
name = "xianyu-mcp"
version = "0.1.0"
description = "基于 XianYuApis 的闲鱼 MCP 服务"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "loguru>=0.7.2",
    "websockets>=12.0",
    "msgpack>=1.0.0",
    "blackboxprotobuf>=1.0.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "python-socks>=2.8.2",
]

[project.scripts]
xianyu-mcp = "xianyu_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xianyu_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
