[project]
name = "xianyuapis-mcp"
version = "0.1.0"
description = "基于 XianYuApis 的闲鱼 MCP 服务"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "loguru>=0.7.2",
    "websockets>=12.0",
    "PyExecJS>=1.5.1",
    "blackboxprotobuf>=1.0.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[tool.hatch.build.targets.wheel]
include = ["server.py", "tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
